fin de proyecto 1

--- a/index.html
+++ b/index.html
@@ -349,6 +349,14 @@
         
     </section>
 
+    <span id="info">Más formas de comprar: <a href="#">encuentra un Apple Store</a> o <a href="#">un distribuidor</a> cerca de ti. O llama al 900 150 503.</span>
+
+    <div id="separacion"></div>
+
+    <aside>Copyright © 2023 Apple Inc. Reservados todos los derechos.</aside>
+
+    
+
 
 
   </footer>
