--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Proyecto 1</title>
     <link rel="stylesheet" href="assets/assets proyecto 1/">
+    <link rel="shortcut icon" href="assets/assets proyecto 1/640px-Apple-logo.png" type="image/x-icon">
 </head>
 <body>
     <header class="flex-container">
@@ -280,68 +281,68 @@
     <section class="nav-footer">
         <div>
             <ul>Ver y comprar
-                <li><a href="">Tienda</a></li>
-                <li><a href="">Mac</a></li>
-                <li><a href="">iPad</a></li>
-                <li><a href="">iPhone</a></li>
-                <li><a href="">Watch</a></li>
-                <li><a href="">AirPods</a></li>
-                <li><a href="">TV y Casa</a></li>
-                <li><a href="">AirTag</a></li>
-                <li><a href="">Accesorios</a></li>
-                <li><a href="">Tarjetas regalo</a></li>
+                <li><a href="#">Tienda</a></li>
+                <li><a href="#">Mac</a></li>
+                <li><a href="#">iPad</a></li>
+                <li><a href="#">iPhone</a></li>
+                <li><a href="#">Watch</a></li>
+                <li><a href="#">AirPods</a></li>
+                <li><a href="#">TV y Casa</a></li>
+                <li><a href="#">AirTag</a></li>
+                <li><a href="#">Accesorios</a></li>
+                <li><a href="#">Tarjetas regalo</a></li>
             </ul>
             <ul>Cartera de Apple
-                <li><a href="">Apple Pay</a></li>
+                <li><a href="https://www.apple.com/es/apple-pay/">Apple Pay</a></li>
             </ul>
 
         </div>
         <div>
         <ul>Cuentas
-            <li><a href="">Gestionar ID de Apple</a></li>
-            <li><a href="">Cuenta del Apple Store</a></li>
-            <li><a href="">iCloud.com</a></li>
+            <li><a href="#">Gestionar ID de Apple</a></li>
+            <li><a href="#">Cuenta del Apple Store</a></li>
+            <li><a href="#">iCloud.com</a></li>
         </ul>
         <ul>Entretenimiento
-            <li><a href="">Apple One</a></li>
-            <li><a href="">Apple TV+</a></li>
-            <li><a href="">Apple Music</a></li>
-            <li><a href="">Apple Arcade</a></li>
-            <li><a href="">Apple Fitness+</a></li>
-            <li><a href="">Apple Podcasts</a></li>
-            <li><a href="">Apple Books</a></li>
-            <li><a href="">App Store</a></li>
+            <li><a href="#">Apple One</a></li>
+            <li><a href="#">Apple TV+</a></li>
+            <li><a href="#">Apple Music</a></li>
+            <li><a href="#">Apple Arcade</a></li>
+            <li><a href="#">Apple Fitness+</a></li>
+            <li><a href="#">Apple Podcasts</a></li>
+            <li><a href="#">Apple Books</a></li>
+            <li><a href="#nav-container">App Store</a></li>
         </ul>
         </div>
 
         <div>
             <ul>Apple Store
-                <li><a href="">Encontrar una tienda</a></li>
-                <li><a href="">Genius Bar</a></li>
-                <li><a href="">Today at Apple</a></li>
-                <li><a href="">Campamento de Apple</a></li>
-                <li><a href="">App Apple Store</a></li>
-                <li><a href="">Reacondicionado y certificado</a></li>
-                <li><a href="">Apple Trade In</a></li>
-                <li><a href="">Financiación</a></li>
-                <li><a href="">Estado del pedido</a></li>
-                <li><a href="">Ayuda para comprar
+                <li><a href="#">Encontrar una tienda</a></li>
+                <li><a href="#">Genius Bar</a></li>
+                <li><a href="#">Today at Apple</a></li>
+                <li><a href="#">Campamento de Apple</a></li>
+                <li><a href="#">App Apple Store</a></li>
+                <li><a href="#">Reacondicionado y certificado</a></li>
+                <li><a href="#">Apple Trade In</a></li>
+                <li><a href="#">Financiación</a></li>
+                <li><a href="#">Estado del pedido</a></li>
+                <li><a href="#">Ayuda para comprar
                 </a></li>
             </ul>
             
         </div>
         <div>
            <ul>Empresas
-               <li><a href="">Apple y las empresas</a></li>
-               <li><a href="">Compras de empresa</a></li>
+               <li><a href="#">Apple y las empresas</a></li>
+               <li><a href="#">Compras de empresa</a></li>
            </ul>
            <ul>Educación
-               <li><a href="">Apple en la educación</a></li>
-               <li><a href="">Compras para la universidad</a></li>
+               <li><a href="#">Apple en la educación</a></li>
+               <li><a href="#">Compras para la universidad</a></li>
            </ul>
         <ul>Salud
-            <li><a href="">Apple en el sector sanitario</a></li>
-            <li><a href="">Salud en el Apple Watch</a></li>
+            <li><a href="#">Apple en el sector sanitario</a></li>
+            <li><a href="#">Salud en el Apple Watch</a></li>
         </ul>
         </div>
 
